path/to/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rancher-ingress
spec:
  selector:
    app: rancher-ingress
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  - protocol: TCP
    port: 443
    targetPort: 443
